fix: switch to scrolling instead of wrapping

--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -13,7 +13,8 @@
     }
 
     code {
-        white-space: pre-wrap;
+        display: block;
+        overflow: auto;
     }
 
     h1,
